--- a/mapmode.html
+++ b/mapmode.html
@@ -101,7 +101,7 @@
 			<a onclick='drawcircle()' class='button'>Define area</a>
 			<div>
 			<span class='scrubber' id='minrent' style=''>$200</span> to <span class='scrubber' id='maxrent' style=''>$3000</span>
-			bedrooms
+			<a class='button'><img src='assets/dog.svg'/></a>
 			<br>
 		</div>
 	</div>
