--- a/mapmode.html
+++ b/mapmode.html
@@ -101,7 +101,9 @@
 			<a onclick='drawcircle()' class='button'>Define area</a>
 			<div>
 			<span class='scrubber' id='minrent' style=''>$200</span> to <span class='scrubber' id='maxrent' style=''>$3000</span>
-			<a class='button'><img src='assets/dog.svg'/></a>
+			<br>
+			<img src='assets/cat.svg' class='button' height='30' width='30' title='Allows cats'/>
+			<img src='assets/dog.svg' class='button' height='30' title='Allows dogs'/>
 			<br>
 		</div>
 	</div>
