nicer map markers

--- a/mapmode.html
+++ b/mapmode.html
@@ -36,6 +36,7 @@
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
 	    <div id='loader'>Fetching listings...</div>
+	    <div id='listingcount'></div>
 	    <span id='dialogmessage'>
 			<svg id='demo'>
 				<style>
