refined hover area

--- a/mapmode.html
+++ b/mapmode.html
@@ -16,7 +16,10 @@
 				<div style='width:65%;overflow:scroll;padding-left:20px;height:100%;margin:0% 2%;'>
 					<h2 id='listingtitle'></h2>
 					<p><span id='bedbath'></span> in <span id='neighborhood'></span> posted <span id='dateposted'></span></p>
-					<div id='gallery'></div>
+					<div id='gallery'>
+						<div id='preview'></div>
+						<img id='galleryimg'>
+					</div>
 					<p id='listingbody'></p>
 					<a onclick='toggledetailview()' class='button'>Close</a>
 					<a id='contact' class='button'>Contact</a>
