switched to google geocoder

--- a/mapmode.html
+++ b/mapmode.html
@@ -13,7 +13,7 @@
 		<div id='detailview'>
 			<div id='detailedmap'></div>
 
-				<div style='width:65%;overflow:scroll;padding-left:20px;height:100%;margin:0% 2%;'>
+				<div id='detailtext'>
 					<h2 id='listingtitle'></h2>
 					<p><span id='bedbath'></span> in <span id='neighborhood'></span> posted <span id='dateposted'></span></p>
 					<div id='gallery'>
