--- a/mapmode.html
+++ b/mapmode.html
@@ -35,7 +35,7 @@
 	    <svg id='circledraw'>
 	    	<circle id='outer'/>
 			<circle id='center' r='5'/>
-			<line id='radius'/>
+			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
 	    <div id='loader'>Fetching listings...</div>
