super rad bouncy animation+new typeface!

--- a/mapmode.html
+++ b/mapmode.html
@@ -15,10 +15,10 @@
 					<div style='position:absolute;top:0px;left:0px;background:grey;color:white'>✕</div>
 
 				<div id='detailtext'>
-					<h3>
-						<span id='listingprice'></span>
+					<p style='min-width:500px; width:80%'>
 						<span id='listingtitle'></span>
-					</h3>
+						<span id='listingprice'></span>
+					</p>
 					<p><span id='bedbath'></span> in <span id='neighborhood'></span> posted <span id='dateposted'></span></p>
 
 					<div id='gallery'>
@@ -37,7 +37,7 @@
 	    </div>
 	    <svg id='circledraw'>
 	    	<circle id='outer'/>
-			<circle id='center' r='5'/>
+			<circle id='center' r='10'/>
 			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
