--- a/mapmode.html
+++ b/mapmode.html
@@ -42,7 +42,7 @@
 			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
-	    <div id='loader'><img src='assets/loader.gif'/></div>
+	    <div id='loader' class='closed'><img src='assets/loader.gif'/></div>
 	    <div id='listingcount'></div>
 	    <span id='dialogmessage'>
 			<svg id='demo'>
