--- a/mapmode.html
+++ b/mapmode.html
@@ -15,11 +15,14 @@
 					<div id='close' onclick='toggledetailview()'>✕</div>
 
 				<div id='detailtext'>
-					<p style='min-width:500px' id='listingtitle'>
+					<p class='rewritable' id='listingtitle'>
 
 					</p>
-					<p id='listingsubtitle'><span id='listingprice'></span> for a 
-					<span id='bedbath'></span> in <span id='neighborhood'></span> (posted <span id='dateposted'></span>)</p>
+					<p id='listingsubtitle'>
+						<span class='rewritable' id='listingprice'></span> for a 
+						<span id='bedbath' class='rewritable'></span> in 
+						<span id='neighborhood' class='rewritable'></span>  (posted 
+						<span id='dateposted' class='rewritable'></span>)</p>
 
 					<div id='gallery'>
 						<div id='preview'></div>
@@ -27,8 +30,8 @@
 							<img id='galleryimg'/>
 						</div>
 					</div>
-					<p id='listingbody'></p>
-					<a id='contact' class='button'>Contact</a>
+					<p id='listingbody' class='rewritable'></p>
+					<a id='contact' target='_blank' class='button'>Contact</a>
 					<a id='listinglink' target='_blank' class='button'>Original listing</a>
 				</div>
 				
@@ -42,7 +45,7 @@
 			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
-	    <div id='loader' class='closed'><img src='assets/loader.gif'/></div>
+	    <img class='closed' id='loader' src='assets/loader.gif'/>
 	    <div id='listingcount'></div>
 	    <span id='dialogmessage'>
 			<svg id='demo'>
