more visual touches

--- a/mapmode.html
+++ b/mapmode.html
@@ -45,7 +45,7 @@
 			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
-	    <img class='closed' id='loader' src='assets/loader.gif'/>
+	    <img class='closed' id='loader' src='assets/largeloader.gif'/>
 	    <div id='listingcount'></div>
 	    <span id='dialogmessage'>
 			<svg id='demo'>
