new loading spinny

--- a/mapmode.html
+++ b/mapmode.html
@@ -45,7 +45,9 @@
 			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
 	    </svg>
-	    <img class='closed' id='loader' src='assets/largeloader.gif'/>
+	    <div class='closed' id='loader'>
+	    	<div id='spinny'>&#9881;</div>
+	    </div>
 	    <div id='listingcount'></div>
 	    <span id='dialogmessage'>
 			<svg id='demo'>
