--- a/mapmode.html
+++ b/mapmode.html
@@ -44,6 +44,7 @@
 			<circle id='center' r='20'/>
 			<line id='drawradius'/>
 			<text id='radiusdistance'> Release to search</text>
+			<text id='miles'>mi</text>
 	    </svg>
 	    <div class='closed' id='loader'>
 	    	<div id='spinny'>&#9881;</div>
