--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id='detailview'>
 			<div id='detailedmap'></div>
-					<div id='close' onclick='toggledetailview()'>✕</div>
+					<div id='close' href='#' onclick='toggledetailview()'>✕</div>
 
 				<div id='detailtext'>
 					<p class='rewritable' id='listingtitle'>
@@ -136,7 +136,6 @@
 			</div>		
 	</div>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src='apartment.js'></script>
 
 
