--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <meta charset="utf-8"> 
 
 <head>
-  <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.js'></script>
+
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.css' rel='stylesheet' />
   <link href='style.css' rel='stylesheet' />
-		
+<script src='https://api.tiles.mapbox.com/mapbox.js/v2.0.1/mapbox.js'></script>
+	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.2.2/mapbox-gl.js'></script>
+	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.2.2/mapbox-gl.css' rel='stylesheet' />	
 </head>
 	<body>
 		<div id='detailview'>
-			<div id='detailedmap'></div>
+			<div id='mappanel'>
+						<img class='detail-marker' src="assets/house.svg">
+					<div class='detail-marker markerlabel'></div>	
+					<div id='detailedmap'></div>								
+			</div>
 					<div id='close' href='#' onclick='toggledetailview()'>✕</div>
 
 				<div id='detailtext'>
@@ -33,19 +38,12 @@
 					<p id='listingbody' class='rewritable'></p>
 					<a id='contact' target='_blank' class='button'>Contact</a>
 					<a id='listinglink' target='_blank' class='button'>Original listing</a>
-				</div>
-				
-		</div>
+				</div></div>
 	    <div id='map'>
+	    <div id='markerpane'></div>
 
 	    </div>
-	    <svg id='circledraw'>
-	    	<circle id='outer'/>
-			<circle id='center' r='20'/>
-			<line id='drawradius'/>
-			<text id='radiusdistance'> Release to search</text>
-			<text id='miles'>mi</text>
-	    </svg>
+
 	    <div class='closed' id='loader'>
 	    	<div id='spinny'>&#9881;</div>
 	    </div>
@@ -110,10 +108,17 @@
 				<text id='cancel' x='270' y='23' onclick="canceldraw()">✕</text>				
 			</svg>
 	    </span>
+	    <svg id='circledraw'>
+	    	<circle id='outer'/>
+			<circle id='center' r='20'/>
+			<line id='drawradius'/>
+			<text id='radiusdistance'> Release to search</text>
+			<text id='miles'>mi</text>
+	    </svg>
 		<div id='maindialog'>
 			<p class='subhead'>Location</p>
 			<div style='border:1px solid grey'>
-				<input type='text' id='locationinput' placeholder='City or ZIP' value='San Francisco' onkeydown="if (event.keyCode == 13) {inputsearch()}"/>
+				<input type='text' id='locationinput' placeholder='City or ZIP' value='Washington DC' onkeydown="if (event.keyCode == 13) {inputsearch()}"/>
 				<a onclick='drawcircle()' id='definearea'>Define area</a>
 			</div>
 
